<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">


    <TextView
        style="@style/TextAboveInputField"
        android:layout_marginTop="20dp"
        android:text="@string/account" />
    <EditText
        android:id="@+id/user_id"
        style="@style/InputField"
        android:hint="輸入帳號"
        android:inputType="text" />

    <TextView
        style="@style/TextAboveInputField"
        android:text="@string/password" />
    <EditText
        android:id="@+id/password"
        style="@style/InputField"
        android:hint="輸入密碼"
        android:inputType="text" />


    <Button
        android:id="@+id/login_button"
        style="@style/ButtonBottom"
        android:text="@string/login" />

    <TextView
        android:id="@+id/login_warning"
        style="@style/WarningText"
        android:text="" />


</LinearLayout>

