<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_margin="8dp"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical">
        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/order_id"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/order_result_order_id"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/user_id"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/order_result_user_id"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/order_title"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/order_result_title"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/date"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/order_result_date"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/num_of_people"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/order_result_num_of_people"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/total_price"
            android:textAppearance="?android:textAppearanceMedium"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:id="@+id/order_result_total_price"
            android:textAppearance="?android:textAppearanceMedium"
            android:textColor="#2B3D4D"/>
    </LinearLayout>

</ScrollView>