<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <TextView
            style="@style/TextAboveInputField"
            android:text="@string/wanna_go_place" />

        <EditText
            android:id="@+id/place"
            style="@style/InputField"
            android:hint="@string/wanna_go_place_hint"
            android:inputType="text" />

        <TextView
            style="@style/TextAboveInputField"
            android:text="出發日期" />

        <EditText
            android:id="@+id/depart_date"
            style="@style/InputField"
            android:hint="YYYY-MM-DD"
            android:inputType="date" />
        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="單" />

            <EditText
                android:id="@+id/search_available_room_single"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="數量"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="雙" />

            <EditText
                android:id="@+id/search_available_room_dual"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="數量"
                android:inputType="number" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:text="四" />

            <EditText
                android:id="@+id/search_available_room_quad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="數量"
                android:inputType="number" />
        </LinearLayout>
        -->

        <Button
            android:id="@+id/search_tour_button"
            style="@style/ButtonBottom"
            android:text="@string/search" />

        <TextView
            android:id="@+id/search_tour_warning"
            style="@style/WarningText"
            android:text="" />

    </LinearLayout>

</ScrollView>